FROMLIST: arm64: dts: qcom: lemans-evk: Enable Adreno 663 GPU
Enable GPU for lemans-evk platform and provide path for zap
shader.

Link: https://lore.kernel.org/all/20250909-a663-gpu-support-v5-5-761fa0a876bf@oss.qualcomm.com/
Reviewed-by: Dmitry Baryshkov <dmitry.baryshkov@oss.qualcomm.com>
Signed-off-by: Akhil P Oommen <akhilpo@oss.qualcomm.com>
Signed-off-by: Haitao Xu <haitxu@qti.qualcomm.com>

--- a/arch/arm64/boot/dts/qcom/lemans-evk.dts
+++ b/arch/arm64/boot/dts/qcom/lemans-evk.dts
@@ -356,6 +356,14 @@
 	};
 };
 
+&gpu {
+	status = "okay";
+};
+
+&gpu_zap_shader {
+	firmware-name = "qcom/sa8775p/a663_zap.mbn";
+};
+
 &ethernet0 {
 	phy-handle = <&hsgmii_phy0>;
 	phy-mode = "2500base-x";
