--- a/arch/arm64/boot/dts/qcom/qcs615-ride.dts
+++ b/arch/arm64/boot/dts/qcom/qcs615-ride.dts
@@ -397,6 +397,7 @@
 	wlan_en_state: wlan-en-state {
 		pins = "gpio98";
 		function = "gpio";
+		drive-strength = <16>;
 		bias-pull-down;
 		output-low;
 	};
